--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
+    "isomorphic-dompurify": "^2.2.0",
     "lowlight": "^3.1.0",
     "next": "^14.0.4",
     "next-redux-wrapper": "^8.1.0",
